--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -28,6 +28,7 @@
 2020-08-25 <a href="#10780b5eed"><strong>大阪大学.社会イノベーション部門</strong></a><br />
 2020-08-28 <a href="#7a9ddac77a"><strong>広島工業大・経営情報システム✌jrec</strong></a><br />
 2020-08-28 <a href="#0118e43dac"><strike>和光大学.情報の基礎✖too much work</strike></a><br />
+2020-08-31 <a href="#f30c6a579f"><strike>工学院大学.情報学フロンティア-情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#7863862135"><strike>般社団法人CRD</strike></a><br />
 2020-08-31 <a href="#4bb5c2134d"><strike>日本工業大✘推薦書</strike></a><br />
 2020-08-31 <a href="#5dc0b999ce"><strike>東京都立大.情報学基礎.2posts</strike></a><br />
@@ -35,56 +36,55 @@
 2020-08-31 <a href="#37848dfdf7"><strike>東京電機大.人間情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#5a15378daf"><strike>滋賀県立大.センシング工学分野</strike></a><br />
 2020-08-31 <a href="#32698d566d"><strike>工学院大学.複合領域-デザイン学-総合理工-計算科学</strike></a><br />
-2020-08-31 <a href="#f30c6a579f"><strike>工学院大学.情報学フロンティア-情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#85650c17d1"><strike>京都大.通信情報システム中✘試用</strike></a><br />
 2020-08-31 <a href="#840cca4261"><strike>株式会社Nextremer.計算科学.quantum</strike></a><br />
 2020-08-31 <a href="#f72003b137"><strike>岡山理科大(ous).情報数理.情報工学.2posts✘(still)toomuchwork</strike></a><br />
-2020-08-31 <a href="#e9bdb6257a">岡山大学.サイバーフィジカル情報の応用研究</a><br />
 2020-08-31 <a href="#1a938c377d"><strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong></a><br />
 2020-08-31 <a href="#3701387ba6"><strong>東京都市大学・情報学</strong></a><br />
 2020-08-31 <a href="#f7ab33943c"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong></a><br />
 2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
-2020-09-07 <a href="#9d2f056f03">法政大学.情報学・計算基盤</a><br />
-2020-09-07 <a href="#abe8802bd2">明治大</a><br />
-2020-09-10 <a href="#7028f433f1">広島工業大学・コンピュータシステム</a><br />
+2020-08-31 <a href="#e9f602ab47"><strong>岡山大学.サイバーフィジカル情報の応用研究</strong></a><br />
+2020-09-07 <a href="#69b2d17e9b"><strike>明治大✘推薦書</strike></a><br />
+2020-09-10 <a href="#35125b0dbe"><strike>公立はこだて未来大</strike></a><br />
+2020-09-10 <a href="#25a4dede0a">公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</a><br />
+2020-09-10 <a href="#6238f6a583"><strike>広島工業大学・コンピュータシステム</strike></a><br />
 2020-09-10 <a href="#973b1ff69b">広島工業大学・情報ネットワーク</a><br />
-2020-09-10 <a href="#26497bf949">公立はこだて未来大.情報デザイン.複雑系知能分野</a><br />
-2020-09-10 <a href="#7a86734726">公立はこだて未来大</a><br />
-2020-09-11 <a href="#9d343defd9">金沢大学.IoT及び情報通信分野</a><br />
-2020-09-11 <a href="#fe6dddcbd9">法政大学.情報科学部コンピュータ科学科</a><br />
-2020-09-11 <a href="#47c598d268">北海道.情報科学研究院</a><br />
 2020-09-11 <a href="#ce3dc41724">明治大学・統計科学・統計数学・知能情報科学</a><br />
-2020-09-14 <a href="#c3a29b4594">国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター</a><br />
-2020-09-14 <a href="#3a4af00f34">東京理科大工学部情報工学科インテリジェントシステム分野</a><br />
-2020-09-14 <a href="#1f67d30de1">琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション</a><br />
+2020-09-11 <a href="#9d343defd9">金沢大学.IoT及び情報通信分野</a><br />
+2020-09-11 <a href="#47c598d268">北海道.情報科学研究院</a><br />
+2020-09-11 <a href="#fe6dddcbd9">法政大学.情報科学部コンピュータ科学科</a><br />
+2020-09-14 <a href="#478f7a5a07">★東京理科大工学部情報工学科インテリジェントシステム分野</a><br />
+2020-09-14 <a href="#06651af053">国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</a><br />
+2020-09-14 <a href="#391814b22c"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike></a><br />
 2020-09-15 <a href="#1e6b039c83">岡山大学.ハードウェア.ソフトウェア</a><br />
-2020-09-15 <a href="#9cea46b8e5">青山学院大.情報社会科学</a><br />
+2020-09-15 <a href="#88b105fd01">青山学院大.情報社会科学✌freeform</a><br />
+2020-09-18 <a href="#20f6e27e79">岡山理科大</a><br />
+2020-09-18 <a href="#4b10992d7b">京都先端科学大学・統計やビジネスデータの見方</a><br />
+2020-09-18 <a href="#78f0d36ebf">熊本学園大学.計量経済学</a><br />
 2020-09-18 <a href="#090d9d916f">長岡技術科学大.情報・経営システム工学専攻</a><br />
 2020-09-18 <a href="#8911794d31">東京電機大学・情報学部門</a><br />
-2020-09-18 <a href="#78f0d36ebf">熊本学園大学.計量経済学</a><br />
-2020-09-18 <a href="#4b10992d7b">京都先端科学大学・統計やビジネスデータの見方</a><br />
-2020-09-18 <a href="#20f6e27e79">岡山理科大</a><br />
 2020-09-20 <a href="#63990482a6">松本大学.データサイエンス.情報学-データサイエンス</a><br />
+2020-09-21 <a href="#8c0538b87d"><strike>法政大学.情報学・計算基盤(picked.another.200911)</strike></a><br />
 2020-09-23 <a href="#6db9f7b7bb">岐阜聖徳学園大学・情報学</a><br />
-2020-09-25 <a href="#e8b7e65e68">日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野</a><br />
-2020-09-25 <a href="#d69e224299">東京理科大.数理モデリング、知能数理分野</a><br />
-2020-09-25 <a href="#23984133ef">東京大学.高性能計算地球科学分野</a><br />
-2020-09-25 <a href="#a1b011f147">成蹊大学.総合理工-計算科学-数物系科学</a><br />
 2020-09-25 <a href="#a00fdcfe40">岩手県立大.人工知能コース</a><br />
+2020-09-25 <a href="#a1b011f147">成蹊大学.総合理工-計算科学-数物系科学</a><br />
+2020-09-25 <a href="#23984133ef">東京大学.高性能計算地球科学分野</a><br />
+2020-09-25 <a href="#d69e224299">東京理科大.数理モデリング、知能数理分野</a><br />
+2020-09-25 <a href="#e8b7e65e68">日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野</a><br />
 2020-09-30 <a href="#1af98e0cbe">龍谷大学・情報科学分野</a><br />
-2020-09-30 <a href="#a34c219398">東京都市大学・情報理論</a><br />
 2020-09-30 <a href="#05b27be63a">名城大学・情報学、統計学、フィールド調査</a><br />
 2020-09-30 <a href="#0e91c1625a">北海道大学.数理科学・応用数学分野</a><br />
+2020-09-30 <a href="#a34c219398">東京都市大学・情報理論</a><br />
 2020-09-30 <a href="#c322643ba2">兵庫県立大学.情報学-情報通信-ネットワーク</a><br />
 2020-09-30 <a href="#61facb8098">兵庫県立大学.AI・IoT・ビックデータ</a><br />
 2020-09-30 <a href="#c1c2b5544e">福岡大.情報学</a><br />
-2020-09-30 <a href="#11294f0d1a">株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</a><br />
+2020-09-30 <a href="#b38a9dc3f6">公立はこだて未来大学・情報システム</a><br />
 2020-09-30 <a href="#3e71914ffd">東京都市大.情報数理</a><br />
 2020-09-30 <a href="#541bf411c3">東京電機大</a><br />
 2020-09-30 <a href="#c82068b406">静岡理工科大学.電子情報分野</a><br />
 2020-09-30 <a href="#729221f684">成蹊大.計算科学</a><br />
-2020-09-30 <a href="#b38a9dc3f6">公立はこだて未来大学・情報システム</a><br />
 2020-09-30 <a href="#3334416dbf">熊本大学・ビッグデータ</a><br />
+2020-09-30 <a href="#11294f0d1a">株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</a><br />
 2020-09-30 <a href="#67a8831c23">岡山大学・電気電子機能開発</a><br />
 2020-10-02 <a href="#222bdcbcbe">明星大.データアナリティクス</a><br />
 2020-10-09 <a href="#bd5caa898a">立命館大学.システム制御工学.無線通信・電波</a><br />
@@ -124,22 +124,11 @@
 <h2 id="日本大.ロボット制御mismatch-2020-08-25-top"><strike>日本大.ロボット・制御✘mismatch</strike> (2020-08-25) <span id="3b52ef5769"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="広島工業大経営情報システムjrec-2020-08-28-top"><strong>広島工業大・経営情報システム✌jrec</strong> (2020-08-28) <span id="7a9ddac77a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="和光大学.情報の基礎too-much-work-2020-08-28-top"><strike>和光大学.情報の基礎✖too much work</strike> (2020-08-28) <span id="0118e43dac"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="岡山大学.サイバーフィジカル情報の応用研究-2020-08-31-top"><strong>岡山大学.サイバーフィジカル情報の応用研究</strong> (2020-08-31) <span id="e9f602ab47"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="駒澤大.情報分野jrec-2020-08-31-top"><strong>駒澤大.情報分野✌jrec</strong> (2020-08-31) <span id="fe42bd3f2b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="大阪大.情報科学試用6カ月jrec-2020-08-31-top"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong> (2020-08-31) <span id="f7ab33943c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学情報学-2020-08-31-top"><strong>東京都市大学・情報学</strong> (2020-08-31) <span id="3701387ba6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="立命館大学2jobs1eng.情報理工学部.セキュリティネットワークコースenglish-2020-08-31-top"><strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong> (2020-08-31) <span id="1a938c377d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="岡山大学.サイバーフィジカル情報の応用研究-2020-08-31-top">岡山大学.サイバーフィジカル情報の応用研究 (2020-08-31) <span id="e9bdb6257a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 23<br />
-id : D120070882 [NEW]<br />
-update : 2020年07月15日<br />
-univ : 岡山大学<br />
-title : 教授の募集（「サイバーフィジカル情報の応用研究拠点」）<br />
-field : 情報学 - 情報学基礎 情報学 - 計算基盤 情報学 - 人間情報学<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年08月31日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070882&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070882&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="岡山理科大ous.情報数理.情報工学.2postsstilltoomuchwork-2020-08-31-top"><strike>岡山理科大(ous).情報数理.情報工学.2posts✘(still)toomuchwork</strike> (2020-08-31) <span id="f72003b137"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="株式会社nextremer.計算科学.quantum-2020-08-31-top"><strike>株式会社Nextremer.計算科学.quantum</strike> (2020-08-31) <span id="840cca4261"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="京都大.通信情報システム中試用-2020-08-31-top"><strike>京都大.通信情報システム中✘試用</strike> (2020-08-31) <span id="85650c17d1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
@@ -151,45 +140,9 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12007088
 <h2 id="東京都立大.情報学基礎.2posts-2020-08-31-top"><strike>東京都立大.情報学基礎.2posts</strike> (2020-08-31) <span id="5dc0b999ce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="日本工業大推薦書-2020-08-31-top"><strike>日本工業大✘推薦書</strike> (2020-08-31) <span id="4bb5c2134d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="般社団法人crd-2020-08-31-top"><strike>般社団法人CRD</strike> (2020-08-31) <span id="7863862135"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="法政大学.情報学計算基盤-2020-09-07-top">法政大学.情報学・計算基盤 (2020-09-07) <span id="9d2f056f03"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 53<br />
-id : D120071477 [NEW]<br />
-update : 2020年07月23日<br />
-univ : 法政大学<br />
-title : 理工学部創生科学科・専任教員採用公募（情報科学・情報工学分野 教授，准教授，専任講師）・東京都小金井市<br />
-field : 情報学 - 全て 情報学 - 計算基盤<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月07日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071477&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071477&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="明治大-2020-09-07-top">明治大 (2020-09-07) <span id="abe8802bd2"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：17<br />
-データ番号 ：D120050553 [NEW]<br />
-更新日 ：2020年05月19日<br />
-機関名 ：明治大学<br />
-タイトル ：専任准教授あるいは専任講師の公募（主に計算機システム分野(ハードウェア研究)）<br />
-研究分野 ：情報学 - 計算機システム ，高性能計算関連(ハードウェア) ，知能情報学(ハードウェア)<br />
-職種 ： 准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年09月07日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050553&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050553&amp;ln_jor=0&amp;top_btn=1</a></p>
-<hr />
-<p><span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="公立はこだて未来大-2020-09-10-top">公立はこだて未来大 (2020-09-10) <span id="7a86734726"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：26<br />
-データ番号 ：D120050949 [NEW]<br />
-更新日 ：2020年05月27日<br />
-機関名 ：公立はこだて未来大学<br />
-タイトル ：公立はこだて未来大学教員募集(教授または准教授，専門分野：情報デザイン）<br />
-研究分野 ：複合領域 - デザイン学<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年09月10日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050949&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050949&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="公立はこだて未来大.情報デザイン.複雑系知能分野-2020-09-10-top">公立はこだて未来大.情報デザイン.複雑系知能分野 (2020-09-10) <span id="26497bf949"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="明治大推薦書-2020-09-07-top"><strike>明治大✘推薦書</strike> (2020-09-07) <span id="69b2d17e9b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="公立はこだて未来大-2020-09-10-top"><strike>公立はこだて未来大</strike> (2020-09-10) <span id="35125b0dbe"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="公立はこだて未来大.情報デザイン.複雑系知能分野freeform-2020-09-10-top">公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform (2020-09-10) <span id="25a4dede0a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 7<br />
 id : D120050949 [UPDATE]<br />
 update : 2020年06月12日<br />
@@ -211,18 +164,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月10日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060722&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060722&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="広島工業大学コンピュータシステム-2020-09-10-top">広島工業大学・コンピュータシステム (2020-09-10) <span id="7028f433f1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 18<br />
-id : D120080390 [NEW]<br />
-update : 2020年08月08日<br />
-univ : 広島工業大学・コンピュータシステム<br />
-title : 教授、准教授、講師又は助教の公募（コンピュータシステム）<br />
-field : 情報学 - 計算基盤<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月10日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080390&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080390&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="広島工業大学コンピュータシステム-2020-09-10-top"><strike>広島工業大学・コンピュータシステム</strike> (2020-09-10) <span id="6238f6a583"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="広島工業大学情報ネットワーク-2020-09-10-top">広島工業大学・情報ネットワーク (2020-09-10) <span id="973b1ff69b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 17<br />
 id : D120080389 [NEW]<br />
@@ -285,19 +227,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月11日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070950&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070950&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター-2020-09-14-top">国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター (2020-09-14) <span id="c3a29b4594"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 24<br />
-id : D120071016 [NEW]<br />
-update : 2020年07月16日<br />
-univ : 国立研究開発法人理化学研究所<br />
-title : チームリーダー（無期雇用職）募集（M21N02）(革新知能統合研究センター)<br />
-field : 情報学 - 数理・情報科学<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月14日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071016&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071016&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京理科大工学部情報工学科インテリジェントシステム分野-2020-09-14-top">東京理科大工学部情報工学科インテリジェントシステム分野 (2020-09-14) <span id="3a4af00f34"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="東京理科大工学部情報工学科インテリジェントシステム分野-2020-09-14-top">★東京理科大工学部情報工学科インテリジェントシステム分野 (2020-09-14) <span id="478f7a5a07"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 42<br />
 id : D120061155 [NEW]<br />
 update : 2020年06月23日<br />
@@ -309,18 +239,19 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月14日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061155&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061155&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="琉球大学.知能情報コース-知能情報講座知能情報学-ヒューマンコンピュータインタラクション-2020-09-14-top">琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション (2020-09-14) <span id="1f67d30de1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 5<br />
-id : D120070826 [UPDATE]<br />
-update : 2020年07月15日<br />
-univ : 琉球大学<br />
-title : 女性教授の公募【知能情報コース　知能情報講座(知能情報学、ヒューマンコンピュータ・インタラクション)】<br />
-field : 情報学 - ヒューマンインターフェース・インタラクション 情報学 - 人間情報学<br />
+<h2 id="国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センターprobation-2020-09-14-top">国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation (2020-09-14) <span id="06651af053"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>no : 24<br />
+id : D120071016 [NEW]<br />
+update : 2020年07月16日<br />
+univ : 国立研究開発法人理化学研究所<br />
+title : チームリーダー（無期雇用職）募集（M21N02）(革新知能統合研究センター)<br />
+field : 情報学 - 数理・情報科学<br />
 post : 教授相当<br />
 tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月14日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070826&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070826&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
+url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071016&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071016&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="琉球大学.知能情報コース-知能情報講座知能情報学-ヒューマンコンピュータインタラクション女性限定-2020-09-14-top"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike> (2020-09-14) <span id="391814b22c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山大学.ハードウェア.ソフトウェア-2020-09-15-top">岡山大学.ハードウェア.ソフトウェア (2020-09-15) <span id="1e6b039c83"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：30<br />
 データ番号 ：D120070445 [NEW]<br />
@@ -346,7 +277,7 @@ No. ：31<br />
 募集終了日 ：2020年09月15日<br />
 ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070447&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070447&amp;ln_jor=0&amp;top_btn=1</a><br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="青山学院大.情報社会科学-2020-09-15-top">青山学院大.情報社会科学 (2020-09-15) <span id="9cea46b8e5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="青山学院大.情報社会科学freeform-2020-09-15-top">青山学院大.情報社会科学✌freeform (2020-09-15) <span id="88b105fd01"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：13<br />
 データ番号 ：D120070293 [NEW]<br />
 更新日 ：2020年07月10日<br />
@@ -430,6 +361,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月20日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070858&amp;ln_jor=0&amp;top_btn=1" class="uri">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070858&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="法政大学.情報学計算基盤picked.another.200911-2020-09-21-top"><strike>法政大学.情報学・計算基盤(picked.another.200911)</strike> (2020-09-21) <span id="8c0538b87d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岐阜聖徳学園大学情報学-2020-09-23-top">岐阜聖徳学園大学・情報学 (2020-09-23) <span id="6db9f7b7bb"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 32<br />
 id : D120080096 [NEW]<br />
