--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -54,7 +54,7 @@
 2020-09-11 <a href="#47c598d268">北海道.情報科学研究院</a><br />
 2020-09-11 <a href="#fe6dddcbd9">法政大学.情報科学部コンピュータ科学科</a><br />
 2020-09-14 <a href="#478f7a5a07">★東京理科大工学部情報工学科インテリジェントシステム分野</a><br />
-2020-09-14 <a href="#06651af053">国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</a><br />
+2020-09-14 <a href="#3e98d45b55"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike></a><br />
 2020-09-14 <a href="#391814b22c"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike></a><br />
 2020-09-15 <a href="#1e6b039c83">岡山大学.ハードウェア.ソフトウェア</a><br />
 2020-09-15 <a href="#88b105fd01">青山学院大.情報社会科学✌freeform</a><br />
@@ -239,18 +239,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月14日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061155&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061155&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センターprobation-2020-09-14-top">国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation (2020-09-14) <span id="06651af053"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 24<br />
-id : D120071016 [NEW]<br />
-update : 2020年07月16日<br />
-univ : 国立研究開発法人理化学研究所<br />
-title : チームリーダー（無期雇用職）募集（M21N02）(革新知能統合研究センター)<br />
-field : 情報学 - 数理・情報科学<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月14日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071016&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071016&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センターprobation-2020-09-14-top"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike> (2020-09-14) <span id="3e98d45b55"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="琉球大学.知能情報コース-知能情報講座知能情報学-ヒューマンコンピュータインタラクション女性限定-2020-09-14-top"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike> (2020-09-14) <span id="391814b22c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山大学.ハードウェア.ソフトウェア-2020-09-15-top">岡山大学.ハードウェア.ソフトウェア (2020-09-15) <span id="1e6b039c83"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：30<br />
