--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -2,8 +2,8 @@
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
 <p>2020-09-06 <a href="#030573910a"><strike>conf~j.candar(naha+virtual)</strike></a><br />
-2020-09-07 <a href="#231c457fac">★conf.IEEE.cloudnet</a><br />
 2020-09-07 <a href="#cb1117c187"><strike>conf.HPCS.highperf</strike></a><br />
+2020-09-07 <a href="#df82c21749"><strike>conf.IEEE.cloudnet(did.not.make.it)</strike></a><br />
 2020-09-07 <a href="#dfefa15f3a"><strike>intconf.IEEE.NCA.netapps</strike></a><br />
 2020-09-10 <a href="#61c37b857a">★conf.CNSM.workshops.future.evolution.of.internet.protocols</a><br />
 2020-09-10 <a href="#a9a07302d4"><strike>conf.springer.MSPN.mobile.prog.networks</strike></a><br />
@@ -53,95 +53,8 @@
 2021-01-15 <a href="#5cd5fc2e1e">journal.ISF.AI.for.covid</a><br />
 2021-01-31 <a href="#2df4e5c249">MDPI.sustain</a></p>
 <h2 id="confj.candarnahavirtual-2020-09-06-top"><strike>conf~j.candar(naha+virtual)</strike> (2020-09-06) <span id="030573910a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="conf.ieee.cloudnet-2020-09-07-top">★conf.IEEE.cloudnet (2020-09-07) <span id="231c457fac"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>The paper submission deadline for CloudNet 2020 has been<br />
-extended to Sept. 7th 2020.</p>
-<table style="width:83%;">
-<colgroup>
-<col style="width: 83%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td><p>9th IEEE International Conference on Cloud Networking CloudNet 2020</p>
-<p>9-11 November 2020 Virtual Conference <a href="https://cloudnet2020.ieee-cloudnet.org">https://cloudnet2020.ieee-cloudnet.org</a></p>
-<p>CALL FOR PAPERS</p></td>
-</tr>
-</tbody>
-</table>
-<p>Cloud Networking has emerged as a promising direction for<br />
-cost-efficient and reliable service delivery across data<br />
-communication networks. The dynamic location of service<br />
-facilities and the virtualization of hardware and software<br />
-elements are stressing the communication network and<br />
-protocols, especially when data centers are interconnected<br />
-through the Internet. Emerging technologies like Network<br />
-Function Virtualization (NFV) and Software Defined Network<br />
-(SDN) can play significant roles by improving the dynamicity<br />
-and programmability of cloud networks. Middlebox has been<br />
-significantly improved the agility of cloud network<br />
-deployment and management. The 9th IEEE International<br />
-Conference on Cloud Networking (IEEE CloudNet 2020), part of<br />
-the IEEE Cloud Computing Initiative, can greatly promote<br />
-research in cloud networks and emerging research areas.</p>
-<h2 id="topics-of-interest-but-not-limited-to">Topics of Interest (but not limited to):</h2>
-<p>Cloud network and resource management<br />
-- Data Center Network Optimization and Management<br />
-- Reliability of Data Center Network and Architecture<br />
-- Energy-Efficient Datacenters and Networks<br />
-- Cloud Traffic Characterization and Measurements<br />
-- Cloud Traffic Engineering<br />
-- Data Flow Management and Load Balancing<br />
-- Cloud Storage Management<br />
-- Green and Energy-Efficient Datacenters and Networks</p>
-<p>Cloud network and virtualization<br />
-- Data Center Networks<br />
-- Virtual Ethernet Switching, Data Center Bridging<br />
-- Mobile Cloud Networking<br />
-- Virtualization of Network Equipment<br />
-- Software-Defined Networking<br />
-- Network Function Virtualization<br />
-- Middleware and Middleboxes</p>
-<p>Cloud network and supported services<br />
-- Big Data Management<br />
-- Data Analytics in Cloud<br />
-- Network Services to support IaaS, PaaS, and SaaS<br />
-- Unified User and Machine Mobility Management<br />
-- Content and Service Distribution<br />
-- Complementing Edge Computing with Data Center Networks</p>
-<p>Cloud network architecture<br />
-- Control-Plane Architectures<br />
-- Distributed Data Center Architectures<br />
-- Routing in cloud networks<br />
-- Intra-Cloud vs Inter-Cloud Management<br />
-- Cloud Federation and Hybrid Cloud Infrastructure</p>
-<p>Cloud network security and privacy<br />
-- Security, Privacy, and Confidentiality in Cloud Networking<br />
-- Cloud Data Provenance and Data Loss Protection<br />
-- Cloud Storage Security<br />
-- Cloud Network Intrusion Detection/Prevention<br />
-- Firewall and Deep Packet Inspection Systems in Cloud<br />
-Networks</p>
-<p>Authors are invited to submit original contributions that<br />
-have not been published or submitted for publication<br />
-elsewhere. Submissions must be in IEEE single-spaced double-<br />
-column style with a length limitation of 6 pages (excluding<br />
-references) for full papers (oral presentation) and 3 pages<br />
-for short papers (poster presentation). Accepted papers<br />
-will be submitted to IEEE Xplore.</p>
-<p>For more information please check<br />
-<a href="https://cloudnet2020.ieee-cloudnet.org">https://cloudnet2020.ieee-cloudnet.org</a></p>
-<h2 id="important-dates">Important Dates:</h2>
-<ul>
-<li>Submission deadline: Sept. 7th (Aug. 24th)<br />
-</li>
-<li>Acceptance notification: Oct. 7th<br />
-</li>
-<li>Camera-ready paper: Oct. 21st<br />
-</li>
-<li>Conference: Nov. 4th-6th</li>
-</ul>
-<p><span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="conf.hpcs.highperf-2020-09-07-top"><strike>conf.HPCS.highperf</strike> (2020-09-07) <span id="cb1117c187"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="conf.ieee.cloudnetdid.not.make.it-2020-09-07-top"><strike>conf.IEEE.cloudnet(did.not.make.it)</strike> (2020-09-07) <span id="df82c21749"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="intconf.ieee.nca.netapps-2020-09-07-top"><strike>intconf.IEEE.NCA.netapps</strike> (2020-09-07) <span id="dfefa15f3a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="conf.cnsm.workshops.future.evolution.of.internet.protocols-2020-09-10-top">★conf.CNSM.workshops.future.evolution.of.internet.protocols (2020-09-10) <span id="61c37b857a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>Dear colleagues,</p>
@@ -1948,7 +1861,7 @@ This special issue belongs to the section “Networks”.</p>
 Register first at: <a href="https://susy.mdpi.com">https://susy.mdpi.com</a><br />
 Submission link: <a href="https://bit.ly/5G-access">https://bit.ly/5G-access</a><br />
 =======================</p>
-<h2 id="important-dates-1">IMPORTANT DATES</h2>
+<h2 id="important-dates">IMPORTANT DATES</h2>
 <p>Deadline for manuscript submissions: 30 November 2020.</p>
 <h2 id="scope-and-topics">SCOPE AND TOPICS</h2>
 <p>During the last decade, 5G technology has been developed and successfully commercialized for mobile communication networks. 5G technology supports enhanced mobile broadband (eMBB) communication, massive machine type communications (mMTC) for Internet of Things (IoT), devices and ultra-reliable low-latency communication (URLLC) for mission-critical devices with IMT-2020 standard aims.</p>
