--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -45,8 +45,8 @@
 2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
 2020-08-31 <a href="#e9f602ab47"><strong>岡山大学.サイバーフィジカル情報の応用研究</strong></a><br />
 2020-09-07 <a href="#69b2d17e9b"><strike>明治大✘推薦書</strike></a><br />
+2020-09-10 <a href="#66bd3309b3"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong></a><br />
 2020-09-10 <a href="#35125b0dbe"><strike>公立はこだて未来大</strike></a><br />
-2020-09-10 <a href="#25a4dede0a">公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</a><br />
 2020-09-10 <a href="#6238f6a583"><strike>広島工業大学・コンピュータシステム</strike></a><br />
 2020-09-10 <a href="#973b1ff69b">広島工業大学・情報ネットワーク</a><br />
 2020-09-11 <a href="#ce3dc41724">明治大学・統計科学・統計数学・知能情報科学</a><br />
@@ -56,8 +56,8 @@
 2020-09-14 <a href="#478f7a5a07">★東京理科大工学部情報工学科インテリジェントシステム分野</a><br />
 2020-09-14 <a href="#3e98d45b55"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike></a><br />
 2020-09-14 <a href="#391814b22c"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike></a><br />
+2020-09-15 <a href="#bc9b288934"><strong>青山学院大.情報社会科学✌freeform</strong></a><br />
 2020-09-15 <a href="#1e6b039c83">岡山大学.ハードウェア.ソフトウェア</a><br />
-2020-09-15 <a href="#88b105fd01">青山学院大.情報社会科学✌freeform</a><br />
 2020-09-18 <a href="#20f6e27e79">岡山理科大</a><br />
 2020-09-18 <a href="#4b10992d7b">京都先端科学大学・統計やビジネスデータの見方</a><br />
 2020-09-18 <a href="#78f0d36ebf">熊本学園大学.計量経済学</a><br />
@@ -141,29 +141,8 @@
 <h2 id="日本工業大推薦書-2020-08-31-top"><strike>日本工業大✘推薦書</strike> (2020-08-31) <span id="4bb5c2134d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="般社団法人crd-2020-08-31-top"><strike>般社団法人CRD</strike> (2020-08-31) <span id="7863862135"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="明治大推薦書-2020-09-07-top"><strike>明治大✘推薦書</strike> (2020-09-07) <span id="69b2d17e9b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="公立はこだて未来大.情報デザイン.複雑系知能分野freeform-2020-09-10-top"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong> (2020-09-10) <span id="66bd3309b3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="公立はこだて未来大-2020-09-10-top"><strike>公立はこだて未来大</strike> (2020-09-10) <span id="35125b0dbe"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="公立はこだて未来大.情報デザイン.複雑系知能分野freeform-2020-09-10-top">公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform (2020-09-10) <span id="25a4dede0a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 7<br />
-id : D120050949 [UPDATE]<br />
-update : 2020年06月12日<br />
-univ : 公立はこだて未来大学<br />
-title : 公立はこだて未来大学教員募集(教授または准教授，専門分野 情報デザイン）<br />
-field : 複合領域 - デザイン学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月10日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050949&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050949&amp;ln_jor=0&amp;top_btn=1</a> ———-</p>
-<p>no : 26<br />
-id : D120060722 [NEW]<br />
-update : 2020年06月13日<br />
-univ : 公立はこだて未来大学<br />
-title : 公立はこだて未来大学教員募集(教授または准教授，専門分野 複雑系知能分野）<br />
-field : 情報学 - 全て 複合領域 - 複雑系科学および知能システムに関連する分野<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月10日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060722&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060722&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="広島工業大学コンピュータシステム-2020-09-10-top"><strike>広島工業大学・コンピュータシステム</strike> (2020-09-10) <span id="6238f6a583"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="広島工業大学情報ネットワーク-2020-09-10-top">広島工業大学・情報ネットワーク (2020-09-10) <span id="973b1ff69b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 17<br />
@@ -241,6 +220,7 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12006115
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センターprobation-2020-09-14-top"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike> (2020-09-14) <span id="3e98d45b55"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="琉球大学.知能情報コース-知能情報講座知能情報学-ヒューマンコンピュータインタラクション女性限定-2020-09-14-top"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike> (2020-09-14) <span id="391814b22c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="青山学院大.情報社会科学freeform-2020-09-15-top"><strong>青山学院大.情報社会科学✌freeform</strong> (2020-09-15) <span id="bc9b288934"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山大学.ハードウェア.ソフトウェア-2020-09-15-top">岡山大学.ハードウェア.ソフトウェア (2020-09-15) <span id="1e6b039c83"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：30<br />
 データ番号 ：D120070445 [NEW]<br />
@@ -265,18 +245,6 @@ No. ：31<br />
 勤務形態 ： 常勤 (任期なし)<br />
 募集終了日 ：2020年09月15日<br />
 ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070447&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070447&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="青山学院大.情報社会科学freeform-2020-09-15-top">青山学院大.情報社会科学✌freeform (2020-09-15) <span id="88b105fd01"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：13<br />
-データ番号 ：D120070293 [NEW]<br />
-更新日 ：2020年07月10日<br />
-機関名 ：青山学院大学<br />
-タイトル ：青山学院大学経営学部教員募集（情報社会科学他）<br />
-研究分野 ：社会科学 - 経営学<br />
-職種 ： 教授相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年09月15日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070293&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070293&amp;ln_jor=0&amp;top_btn=1</a><br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="岡山理科大-2020-09-18-top">岡山理科大 (2020-09-18) <span id="20f6e27e79"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 29<br />
